test_suite/tests/ui/enum-representation/integer-and-content.stderr
error: #[serde(tag = "...", content = "...")] must be used together
 --> $DIR/integer-and-content.rs:5:9
  |
5 | #[serde(content = "c")]
  |         ^^^^^^^

error: aborting due to previous error

